--- a/trunk/hybris/bin/custom/merchandise/merchandisestorefront/web/webroot/_ui/desktop/common/css/main.css
+++ b/trunk/hybris/bin/custom/merchandise/merchandisestorefront/web/webroot/_ui/desktop/common/css/main.css
@@ -5,9 +5,10 @@ html {
 
 body {
 	color: #000;
-	text-align: left;
-	font-size: 12px;
-
+	background-color: #fff;
+    font-size: 14px;
+    font-family: Arial, Sans-Serif;
+    font-weight: normal;
 }
 
 
